--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+.keys{
+	display: flex;
+	justify-content: space-around;
+}
+.key {
+	padding: 20px;
+	border: 1px solid black;
+	text-align: center;
+}
